--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^6.1.2",
     "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^6.1.2",
+    "@mui/x-data-grid": "^7.21.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.21.3"
